--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 30 18:39:52 AWST 2023
-sdk.dir=/Users/joelpita/Library/Android/sdk
+#Tue Sep 12 10:24:26 AWST 2023
+sdk.dir=C\:\\Users\\lachl\\AppData\\Local\\Android\\Sdk
