--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# https://github.com/github/gitignore/blob/main/Android.gitignore
+# Created by paulsmithkc
+# in 2021
+
 # Gradle files
 .gradle/
 build/
